Have added the overflow-x hidden to stop side scrolling that was appearing on the site

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
   box-sizing: border-box;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 hr {
   /* width: 50%; */
   color: #2d2d2d;
